<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/Layout.FillWidth"
        android:layout_marginBottom="80dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lblNameDetailGroupPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="POINT OF GROUP A"
            android:textColor="@color/white_text"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@color/background_frame" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/team"
                android:textColor="@color/white_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/detai_group_point_Pts"
                android:textColor="@color/red_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/textView1"
                android:gravity="center"
                android:text="@string/detai_group_point_MP"
                android:textColor="@color/white_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/textView2"
                android:gravity="center"
                android:text="@string/detai_group_point_W"
                android:textColor="@color/white_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/textView3"
                android:gravity="center"
                android:text="@string/detai_group_point_D"
                android:textColor="@color/white_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/textView4"
                android:gravity="center"
                android:text="@string/detai_group_point_L"
                android:textColor="@color/white_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/textView5"
                android:gravity="center"
                android:text="@string/detai_group_point_hs"
                android:textColor="@color/white_text"
                android:textSize="18sp" />
        </RelativeLayout>

        <ListView
            android:id="@+id/lsvPoint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        style="@style/Layout.FillWidth"
      android:layout_marginTop="300dp"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout style="@style/Layout.FillWidth" >

            <TextView
                style="@style/Layout.FillWidth"
                android:layout_weight="1"
                android:text="@string/guide_pts" />

            <TextView
                style="@style/Layout.FillWidth"
                android:layout_weight="1"
                android:text="@string/guide_mp" />
        </LinearLayout>

        <LinearLayout style="@style/Layout.FillWidth" >

            <TextView
                style="@style/Layout.FillWidth"
                android:layout_weight="1"
                android:text="@string/guide_w" />

            <TextView
                style="@style/Layout.FillWidth"
                android:layout_weight="1"
                android:text="@string/guide_D" />
        </LinearLayout>

        <LinearLayout style="@style/Layout.FillWidth" >

            <TextView
                style="@style/Layout.FillWidth"
                android:layout_weight="1"
                android:text="@string/guide_l" />

            <TextView
                style="@style/Layout.FillWidth"
                android:layout_weight="1"
                android:text="@string/guide_plus" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>