<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cdtimer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layoutHomeScreen1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home"
        android:visibility="gone"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutHomeScreen2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:id="@+id/layoutHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/home_title"
                android:textColor="@color/text_home_fragment"
                android:textSize="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/home_brazil"
                android:textColor="@color/red_text"
                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/home_year"
                android:textColor="@color/text_home_fragment"
                android:textSize="30dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtComing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/coming_in"
            android:textColor="@color/text_home_fragment" />

        <LinearLayout
            android:id="@+id/layout_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/lbltimerDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    android:textColor="@color/number_home_fragment"
                    android:textSize="50sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_day"
                    android:textColor="@color/text_home_fragment"
                    android:textSize="21sp"
                    android:typeface="sans" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10sp" >

                <TextView
                    android:id="@+id/lbltimerHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="00"
                    android:textColor="@color/number_home_fragment"
                    android:textSize="50sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/home_hour"
                    android:textColor="@color/text_home_fragment"
                    android:textSize="21sp"
                    android:typeface="sans" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10sp" >

                <TextView
                    android:id="@+id/lbltimerMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="00"
                    android:textColor="@color/number_home_fragment"
                    android:textSize="50sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:text="@string/home_min"
                    android:textColor="@color/text_home_fragment"
                    android:textSize="21sp"
                    android:typeface="sans" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10sp" >

                <TextView
                    android:id="@+id/lbltimerSec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="10dp"
                    android:text="00"
                    android:textColor="@color/number_home_fragment"
                    android:textSize="50sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:text="@string/home_sec"
                    android:textColor="@color/text_home_fragment"
                    android:textSize="21sp"
                    android:typeface="sans" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>