<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_frame"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@color/background_header"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="22dp"
                android:background="@drawable/ic_golden_boot" >
            </LinearLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginRight="46dp"
                android:text="@string/top_score"
                android:textColor="@color/text_header"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRefresh"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_refresh" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_frame"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="7dp"
            android:paddingTop="7dp" >

            <TextView
                android:id="@+id/lblNameCountry"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="@string/team"
                android:textColor="@color/white_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="164dp"
                android:gravity="center"
                android:text="@string/player"
                android:textColor="@color/white_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="@color/white_text"
                android:textSize="18sp" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/background" />

        <ListView
            android:id="@+id/lsvTopSccore"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="@color/background"
            android:dividerHeight="1px"
            android:headerDividersEnabled="true" >
        </ListView>

        <TextView
            android:id="@+id/empty"
            style="@style/Layout.WrapWidthHeight"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/no_date_found"
            android:textColor="@color/white_text"
            android:textSize="24sp"
             >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnLinkMyWeb"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="Hotel Buchungen weltweit in 120 Laendern"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/logo1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/myWeb"
                android:textColor="@color/blue" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>